syntax = "proto3";

package yandex.cloud.priv.datatransfer.console.v1.dynamicform;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/datatransfer/v1/console/dynamicform;tm_console_server";

// Form field value type
enum ItemType {
    ITEM_TYPE_UNSPECIFIED = 0;
    OBJECT = 1;
    ARRAY = 2;
    BOOLEAN = 3;
    NUMBER = 4;
    STRING = 5;
}
// Resource link type
enum LinkType {
    LINK_TYPE_UNSPECIFIED = 0;
    EXTERNAL = 1;
    MYSQL = 2;
    POSTGRES = 3;
    CLICKHOUSE = 4;
    MONGO = 5;
    KAFKA = 6;
    GREENPLUM = 7;
}
// Form item layout (specifies how frontend draw item)
enum ViewSpecLayout {
    VIEW_SPEC_LAYOUT_UNSPECIFIED = 0;
    ROW = 1;
    TABLE_ITEM = 4;
    TRANSPARENT = 5;
    ACCORDEON = 2;
    SECTION = 3;
    SECTION2 = 6;
    GROUP = 7;
    GROUP2 = 8;
}
// Format for number item type
enum NumberFormat {
    NUMBER_FORMAT_UNSPECIFIED = 0;
    INT64 = 1;
    FLOAT = 2;
}
// Form field
message Item {
    // Type of form item
    ItemType type = 1;
    // Appearance properties
    ViewSpec view_spec = 2;
    // Field is required
    bool required = 3;
    // Frontend validator for field
    string validator = 14;
    // Child items, if item type is object
    map<string,Item> properties = 4;
    // Array item properties, if item type is array
    Item items = 5;
    // Enum values, if item type is enum
    repeated string enum = 6;
    // Titles for enum values, if item type is array
    // (enum value - key, title - value)
    map<string,string> description = 7;
    // Number format, if item type is number
    NumberFormat format = 8;
    // Minimum value, if item type is number
    double minimum = 9;
    // Maximum value, if item type is number
    double maximum = 10;
    // Regex for string values validation, if item type is string or array of strings
    string pattern = 11;
    // Minimum length for string value or minimun length of array, if item type is
    // string or array of strings
    int64 min_length = 12;
    // Maximim length for string value or minimun length of array, if item type is
    // string or array of strings
    int64 max_length = 13;
}
message ViewSpec {
    // Control to use, default is 'base' - select control from item type
    string type = 1;
    // Control layout
    ViewSpecLayout layout = 2;
    // Option for layout 'ACCORDEON', initial state of accordion - opened/closed
    bool layout_open = 10;
    // Control is disabled or enabled
    bool disabled = 3;
    // Title
    string layout_title = 4;
    // Help text
    string layout_description = 5;
    // For array
    string item_label = 6;
    // For array of objects only, draw array of objects as table
    repeated ViewTableCell table = 7;
    // Order of items, for object
    repeated string order = 8;
    // Draw link control on overview stage
    Link link = 9;
}
// Sets the order of the columns in the table, for array of objects
message ViewTableCell {
    // Column title
    string label = 1;
    // Item name from child object
    string property = 2;
}
// Managed database link
message CloudLink {
    // Managed database cluster ID
    string cluster_id = 1;
    // Clous folder ID
    string folder_id = 2;
}
// Link to not cloud resource
message ExternalLink {
    // Link template
    string link = 1;
    // Link params
    map<string,string> props = 2;
}
// Link control, draws only on overview stage
message Link {
    // Type of link
    LinkType type = 1;
    // Link properties
    oneof link {
        // Cloud resourse link properties
        CloudLink cloud = 2;
        // Not cloud resourse link properties
        ExternalLink external = 3;
    }
}
